# Bachelor-Thesis-SML

./: .env.example  .gitignore  README.md  VISUALIZATION_IMPROVEMENTS.md  main.py  pyproject.toml  test_chebyshev.py  test_utopia_point.py
configs/: config.yaml
configs/benchmark/: glue-2-label.yaml  poc.yaml  qnli-mrpc-sweep.yaml  recovery-cola.yaml  recovery-mrpc.yaml  recovery-qnli.yaml  recovery-sst2.yaml
configs/cluster/: euler.yaml
configs/dataset/: ag_news.yaml  cola.yaml  imdb.yaml  mnli.yaml  mrpc.yaml  qnli.yaml  sst2.yaml
configs/method/: averaging.yaml  chebyshev.yaml  chebyshev_recovery.yaml  epo.yaml  epo_recovery.yaml  layerwise_self_position.yaml  self_position.yaml  ties.yaml
configs/model/: roberta_base.yaml
notebooks/: thesis_plots.ipynb
scripts/: replot.py  setup_data.py  setup_models.py  sync_artifacts.py
scripts/cluster/: extract_results.sh  run_benchmark.slurm  setup_euler.sh
src/: args.py  constants.py
src/benchmarks/: evaluate_saved.py  reference_losses.py  reference_points.py  run.py
src/benchmarks/poc/: evaluate_saved.py  run.py
src/data/: loaders.py
src/evaluation/: evaluator.py  metrics.py
src/methods/: __init__.py  averaging.py  base.py  chebyshev_ft.py  epo_search.py  registry.py  self_position.py  ties.py
src/models/: loaders.py  multi_task.py
src/utils/: cache.py  cache_joblib.py  config_validator.py  device.py  logger.py  seeding.py  wandb_utils.py
src/visualization/: generator.py  pareto.py  plots.py  wandb_dashboard.py  wandb_viz.py
tests/test_visualization/: __init__.py  conftest.py  test_generator.py  test_pareto.py  test_plots.py
