[project]
name = "bachelor-thesis-sml"
version = "0.1.0"
description = "Project for benchmarking and deloping model merging methods for my bachelor thesis at the ETH Statistical Machine Learning Lab (SML)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "datasets>=4.4.1",
    "transformers>=4.57.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.9.1",
]
cuda = [
    "torch>=2.9.1",
]
xpu = [
    "pytorch-triton-xpu>=3.5.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "torch>=2.9.1",
]

[dependency-groups]
cluster = [
    "wandb>=0.23.0",
]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu",  extra = "xpu"  },
  { index = "pytorch-cpu",  extra = "cpu"  },
  { index = "pytorch-cu128", extra = "cuda" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = ["sys_platform == 'win32' or sys_platform == 'linux'"]

conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
  [
    { extra = "cpu" },
    { extra = "xpu" },
  ],
  [
    { extra = "cuda" },
    { extra = "xpu" },
  ],
]